package java.utils;

public interface Observer {

  public void update(Observable)
}
